[package]
name = "anthill"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true

[dependencies]
anyhow = "1"
log = "0.4"
rand = "0.8"
serde = "1"
serde_json = "1"

actix = "0.13"
actix-web = "4"
actix-web-actors = "4.1"
actix-files = "0.6"

tokio = { version = "1", features = ["full", "tracing"] }
clap = { version = "3.2.4", features = ["derive"] }
